--- a/index.html
+++ b/index.html
@@ -5,30 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Blog preview card</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <link stylesheet rel="stylesheet" href="./style.css">
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+  @import url('https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Outfit:wght@100..900&display=swap');
   </style>
+  <title>Frontend Mentor | Blog preview card</title>
 </head>
 <body>
+  <div class="card">
+    <div class="card-body">
+      <p class="box">Learning</p>
 
-  Learning
+      <p class="date">Published 21 Dec 2023</p>
 
-  Published 21 Dec 2023
+      <p class="card-title">HTML & CSS foundations</p>
 
-  HTML & CSS foundations
+      <p class="card-text">These languages are the backbone of every website, defining structure, content, and presentation.</p>
 
-  These languages are the backbone of every website, defining structure, content, and presentation.
-
-  Greg Hooper
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+      <p class="name">Greg Hooper</p>      
+    </div>
   </div>
 </body>
 </html>
