Updated CSS and HTML

--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link stylesheet rel="stylesheet" href="./style.css">
-  <style>
-  @import url('https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Outfit:wght@100..900&display=swap');
-  </style>
   <title>Frontend Mentor | Blog preview card</title>
 </head>
 <body>
   <div class="card">
+    <img src="assets/images/illustration-article.svg" class="card-img-top">
     <div class="card-body">
       <p class="box">Learning</p>
 
@@ -22,7 +20,8 @@
 
       <p class="card-text">These languages are the backbone of every website, defining structure, content, and presentation.</p>
 
-      <p class="name">Greg Hooper</p>      
+      <img src="assets/images/image-avatar.webp" class="avatar" alt="Avatar of Greg Hooper">
+      <span class="name">Greg Hooper</span>      
     </div>
   </div>
 </body>
